// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`FastImage (iOS) renders 1`] = `
"<FastImageView
  defaultSource={null}
  handledEvents={0}
  loopCount={-1}
  resizeMode="cover"
  source={
    {
      "headers": {
        "token": "someToken",
      },
      "priority": "high",
      "uri": "https://facebook.github.io/react/img/logo_og.png",
    }
  }
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
  transitionBetweenImages={false}
  transitionDuration={0}
  transitionSkipOnCacheHit="memory"
/>"
`;

exports[`FastImage (iOS) renders a normal Image when not passed a uri 1`] = `
"<FastImageView
  defaultSource={null}
  handledEvents={0}
  loopCount={-1}
  resizeMode="cover"
  source={
    {
      "testUri": "ReactNativeFastImageExample/src/images/jellyfish.gif",
    }
  }
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
  transitionBetweenImages={false}
  transitionDuration={0}
  transitionSkipOnCacheHit="memory"
/>"
`;

exports[`FastImage (iOS) renders defaultSource 1`] = `
"<FastImageView
  defaultSource={
    {
      "testUri": "ReactNativeFastImageExample/src/images/jellyfish.gif",
    }
  }
  handledEvents={0}
  loopCount={-1}
  resizeMode="cover"
  source={null}
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
  transitionBetweenImages={false}
  transitionDuration={0}
  transitionSkipOnCacheHit="memory"
/>"
`;

exports[`FastImage (Android) renders a normal defaultSource 1`] = `
"<FastImageView
  handledEvents={0}
  loopCount={-1}
  resizeMode="cover"
  source={null}
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
  transitionBetweenImages={false}
  transitionDuration={300}
  transitionSkipOnCacheHit="memory"
/>"
`;

exports[`FastImage (Android) renders a normal defaultSource when fails to load source 1`] = `
"<FastImageView
  handledEvents={0}
  loopCount={-1}
  resizeMode="cover"
  source={
    {
      "uri": "https://www.google.com/image_does_not_exist.png",
    }
  }
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
  transitionBetweenImages={false}
  transitionDuration={300}
  transitionSkipOnCacheHit="memory"
/>"
`;

exports[`FastImage (Android) renders a non-existing defaultSource 1`] = `
"<FastImageView
  defaultSource={null}
  handledEvents={0}
  loopCount={-1}
  resizeMode="cover"
  source={null}
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
  transitionBetweenImages={false}
  transitionDuration={300}
  transitionSkipOnCacheHit="memory"
/>"
`;
